# VolkEngine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
assets/: reference_scene.gltf
assets/textures/: ground_albedo.ppm
benchmarks/: scenarios.json
cmake/: VolkEngineBootstrap.cmake  VolkEngineDependencies.cmake
docs/: Architecture.md  Performance.md  README.md  Renderer.md
docs/api/: core.md  frame-graph.md  platform.md  renderer.md  resources.md  scene.md
docs/topics/: architecture.md  performance.md  renderer-pipeline.md  shaders-assets.md
engine/assets/: AssetDatabase.cpp  AssetDatabase.hpp  ContentHash.cpp  ContentHash.hpp  DerivedDataCache.cpp  DerivedDataCache.hpp  GltfImporter.cpp  GltfImporter.hpp  ReferenceAssetPipeline.cpp  ReferenceAssetPipeline.hpp  RuntimeAssets.hpp  SceneImporter.cpp  SceneImporter.hpp  TextureArtifact.cpp  TextureArtifact.hpp
engine/core/: Application.cpp  Application.hpp  Assert.hpp  BinaryIO.hpp  Camera.cpp  Camera.hpp  Config.hpp  FileSystem.cpp  FileSystem.hpp  JobSystem.cpp  JobSystem.hpp  Log.cpp  Log.hpp  Math.hpp  MetricDistribution.hpp  RunSummary.cpp  RunSummary.hpp  SimulationEvents.hpp  SimulationStepResource.hpp  SimulationTimers.hpp  Time.cpp  Time.hpp  World.hpp  WorldScheduler.hpp
engine/editor/: AuthoringCooker.cpp  AuthoringCooker.hpp  AuthoringDocument.cpp  AuthoringDocument.hpp  EditorSession.cpp  EditorSession.hpp  EditorShell.cpp  EditorShell.hpp
engine/landscape/: Landscape.cpp  Landscape.hpp
engine/platform/: Input.cpp  Input.hpp  InputActions.cpp  InputActions.hpp  Window.cpp  Window.hpp
engine/renderer/: FrameGraph.hpp  FrameGraphTopology.hpp  Geometry.cpp  Geometry.hpp  GpuResourceRegistry.hpp  GreedyMesher.cpp  GreedyMesher.hpp  ImageLoader.cpp  ImageLoader.hpp  Lighting.cpp  Lighting.hpp  MeshClusters.cpp  MeshClusters.hpp  Renderer.hpp  SceneRenderer.cpp  SceneRenderer.hpp  StbImageUsage.cpp
engine/renderer/vulkan/: VulkanFrameGraphSync.hpp  VulkanReadbackState.hpp  VulkanRenderer.Assets.cpp  VulkanRenderer.Device.cpp  VulkanRenderer.Frame.cpp  VulkanRenderer.FrameResources.cpp  VulkanRenderer.ImGui.cpp  VulkanRenderer.Lifecycle.cpp  VulkanRenderer.Lighting.cpp  VulkanRenderer.Meshes.cpp  VulkanRenderer.Pipelines.cpp  VulkanRenderer.Resources.cpp  VulkanRenderer.Screenshot.cpp  VulkanRenderer.Swapchain.cpp  VulkanRenderer.Sync.cpp  VulkanRenderer.Uploads.cpp  VulkanRenderer.Visibility.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererImpl.hpp
engine/scene/: CookedWorld.cpp  CookedWorld.hpp  SceneComponents.annotations.hpp  ScenePersistence.cpp  ScenePersistence.hpp  SceneReflection.cpp  SceneReflection.hpp  SceneSchema.generated.hpp
engine/shaders/: atmosphere.frag  depth_pyramid.comp  light_assign.comp  scene.frag  scene.vert  scene_cull.comp  scene_depth.vert  shadow.frag  shadow.vert  tonemap.frag  tonemap.vert
engine/shaders/common/: foliage_wind.glsl  lighting.glsl  pbr.glsl  scene_instances.glsl  scene_uniforms.glsl
engine/streaming/: ResidencyManager.cpp  ResidencyManager.hpp  WorldPartition.cpp  WorldPartition.hpp
samples/editor/: main.cpp
samples/partition/: main.cpp
samples/sandbox/: main.cpp
schemas/: scene-components.schema
tests/: AssetPipelineCpuTests.cpp  AuthoringCpuTests.cpp  CameraCpuTests.cpp  ConfigCpuTests.cpp  FrameGraphCpuTests.cpp  GeometryCpuTests.cpp  GpuResourceRegistryCpuTests.cpp  GreedyMesherCpuTests.cpp  ImageLoaderCpuTests.cpp  InputCpuTests.cpp  JobSystemBenchmark.cpp  JobSystemCpuTests.cpp  LandscapeCpuTests.cpp  LightingCpuTests.cpp  MathCpuTests.cpp  MeshClustersCpuTests.cpp  PlatformLifecycleCpuTests.cpp  ResidencyManagerCpuTests.cpp  RunSummaryCpuTests.cpp  ScenePersistenceCpuTests.cpp  SceneRendererCpuTests.cpp  TimeCpuTests.cpp  VulkanFrameGraphSyncCpuTests.cpp  VulkanFrustumCpuTests.cpp  VulkanReadbackStateCpuTests.cpp  WorldCpuTests.cpp  WorldPartitionCpuTests.cpp  WorldSceneCpuTests.cpp  WorldSchedulerCpuTests.cpp
tmp/: batched-scene-pipelines-validation.ppm  compact-sort-keys.ppm  direct-mesh-staging.ppm  frame-pools-transient.ppm  instance-buffer-grow.ppm  materialize-grid-hit.ppm  normal-map-sampler.ppm  obj-prereserve-import.ppm  registry-compact.ppm  reverse-z-no-prepass.ppm  reverse-z-prepass.ppm  scene_depth_validation.spv  scene_flat_varyings_validation.spv  scene_frag_validation.spv  scene_normal_no_geometricN.spv  shader-flat-material-varyings.ppm  shader-normal-no-geometricN.ppm  shader-pbr-fastmath.ppm  shader-word-load.ppm  take-buffer-inline-sort.ppm  texture-upload-batch.ppm  tonemap-cleanup.ppm  tonemap-srgb-oetf.ppm
tools/: check_run_summary.py  compare_ppm.py  generate_scene_schema.py
